# openeval-runner

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yaml  test.yml
src/openeval_runner/: config.py  converter.py  daemon.py  dora_runner.py  evaluator.py  job_client.py  runner.py
tests/: conftest.py  dataflow.yaml  metadata.yaml  test_converter.py  test_evaluator.py  test_job_client.py
tests/fixtures/dataset/evaluate-1/: metadata.yaml
tests/fixtures/dataset/evaluate-2/: metadata.yaml
tests/fixtures/dataset/evaluate-3/: metadata.yaml
tests/fixtures/dataset/evaluate-4/: metadata.yaml
