# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "openeval-runner"
version = "0.1.0"
authors = [{ name = "Enactic, Inc." }]
description = "Evaluate submitted policy servers in OpenArm Cell automatically."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dora-rs==0.5.0",
    "dora-rs-cli==0.5.0",
    "openarm-driver>=0.1.0",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "responses>=0.26.1",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
norecursedirs = ["tests/nodes"]
pythonpath = ["src"]

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
